# docs/swagger.yaml
@@ -140,6 +140,35 @@ paths:
       summary: 注册
       tags:
       - Users 用户
+  /api/users/:id/detail:
+    get:
+      consumes:
+      - application/json
+      description: 查询数据
+      parameters:
+      - description: 用户ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{staus:"OK", data:响应数据}'
+          schema:
+            $ref: '#/definitions/schema.User'
+        "400":
+          description: '{code:400, status:"OK", message:"请求参数错误"}'
+          schema:
+            $ref: '#/definitions/schema.ErrorItem'
+        "404":
+          description: '{code:404, status:"OK", message:"资源不存在"}'
+          schema:
+            $ref: '#/definitions/schema.ErrorItem'
+      summary: 查询数据
+      tags:
+      - Users 用户
   /api/users/{id}:
     get:
       consumes:
